Task - melhorias